# fulltext_ranked

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
fixtures/: testdata.json
src/: asgi.py  env-local.example  settings.py  urls.py  wsgi.py
src/fulltext_demo/: models.py
src/fulltext_demo/migrations/: 0001_initial.py  0002_category_item_categories.py  0003_category_parent.py  0004_item_flat_categories.py  0005_remove_item_flat_categories_alter_category_parent.py  0006_category_ancestors.py
tests/: categories_save__test.py  ranking__test.py  settings_test.py
